# molab_sdxl_trainer

./: .gitignore  README.md  project_roots.py  pyproject.toml  requirements-blackwell-cu128.txt  requirements-molab.txt  requirements-sageattention.txt
backend/: __init__.py
configs/: sdxl_lora_minimal.json
core/: __init__.py  accelerator.py  aesthetic_labeling.py  audit_launcher.py  audit_system.py  configs.py  constants.py  controller.py  cropper.py  dataset_bbox_annotator.py  dataset_purifier.py  entry_lama.py  entry_lr_find.py  entry_merger.py  entry_semantic_align.py  entry_train.py  entry_upscaler.py  entry_yolo.py  entry_yolo_annotate.py  event_bus.py  events.py  execution_manifest.py  execution_profile.py  execution_resolver.py  export_targets.py  exporter.py  gemini_tagger.py  gguf_arch_adapter.py  gguf_quantizer_engine.py  gpu_resource_manager.py  heavy_python.py  hf_downloader.py  image_gguf_contracts.py  image_gguf_probe.py  job_manager.py  launcher.py  limiter.py  llm_client.py  llm_engine.py  llm_provider_bridge.py  (+773 more)
core/auditor/: __init__.py  auditor.py  engine.py  icu_health.py  interpreter.py  types.py  watchdog.py
core/contracts/: __init__.py  (+12 more)
core/warehouse/lulynx_compliance/: pyproject.toml
core/warehouse/lulynx_compliance/src/lulynx_compliance/: __init__.py  banner.py  provenance.py  signing.py
core/warehouse/lulynx_plugin_core/: diagnostics.py  pyproject.toml
core/warehouse/lulynx_plugin_core/src/lulynx_plugin_core/: __init__.py  approval.py  audit.py  capabilities.py  dispatch_protocol.py  enabled.py  event_bus.py  hooks.py  manifest.py  orchestrator.py  policy.py  protocol.py  trust.py
core/warehouse/lulynx_route_contract/: pyproject.toml
core/warehouse/lulynx_route_contract/src/lulynx_route_contract/: __init__.py  contract.py  families.py
core/warehouse/lulynx_trainer_registry/: pyproject.toml
core/warehouse/lulynx_trainer_registry/src/lulynx_trainer_registry/: __init__.py  registry.py  runtime_detect.py
notebooks/: molab_sdxl_lora.py
scripts/: export_molab_sdxl_repo.py  run_sdxl_train.py
(+2066 files in other folders)
