[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lulynx-compliance"
version = "0.1.0"
description = "Provenance stamping, runtime banners, and metadata signing for training pipelines"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "lulynx-route-contract>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
