[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lulynx-plugin-core"
version = "0.1.0"
description = "Plugin manifest, event bus, capability tiers, approval/trust store, and policy engine for extensible training pipelines"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "lulynx-route-contract>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
