[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lulynx-trainer-registry"
version = "0.1.0"
description = "Data-driven trainer definition registry with hardware runtime detection"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
